# pyDatalog

./: .gitignore  .readthedocs.yaml  2to3.bat  CHANGELOG.md  CI.md  DONE.md  MANIFEST.in  README.md  README.rst  README.txt  TODO.md  agent.md  convert_md_to_ipynb.py  create_dist.bat  cythonize.py  install.txt  licence.txt  mkdocs.yml  pyDatalog.lua  pyDatalog.py  pyproject.toml  setup.cfg  setup.py  test.py  test_md.ipynb  test_md.md  upload.bat
.github/workflows/: build_wheels.yml  tests.yml
docs/: 1_Online_Datalog_tutorial.ipynb  2_oo_datalog.ipynb  3_data_integration.ipynb  4_advanced.ipynb  advanced.md  conf.py  console.md  data_integration.md  index.md  installation.md  oo_datalog.md  reference.md  requirements.txt  support.md  tutorial.md
examples/: SQLAlchemy.py  datalog.py  hashtag.py  python.py  queens.py  queens_N.py  threadSafe.py
pyDatalog/: Aggregate.py  Counter.py  Logic.py  UserList.py  __init__.py  _example SQLAlchemy.py  _example datalog.py  _example python.py  _example queens.py  console.py  doc.py  essai_pull_request.txt  example.py  fact_storage.cpp  fact_storage.pyx  grammar.txt  luaEngine.lua  luaEngine.py  pyDatalog.lua  pyDatalog.py  pyEngine.c  pyEngine.pxd  pyEngine.py  pyParser.py  task_queue.cpp  task_queue.pyx  task_storage.cpp  test.py  test_of_performance.py  test_pyEngine.py  util.py  version.py
pyDatalog/IPython/: Online_Datalog_tutorial.ipynb
pyDatalog/examples/: Mongo.py  SQLAlchemy.py  __init__.py  _example SQLAlchemy.py  _example datalog.py  _example python.py  _example queens.py  console.py  datalog.py  graph.py  hashtag.py  hashtag_optimized.py  logelei.py  multiModel.py  python.py  queens.py  queens_N.py  test.py  test_of_performance.py  test_task_queue.py  threadSafe.py  tutorial.py
pyDatalog/test/: placeholder.py  test_README.md
scratch/: check_links.py  update_docs.py
site/: 404.html  index.html  sitemap.xml
site/advanced/: index.html
site/console/: index.html
site/data_integration/: index.html
site/installation/: index.html
site/oo_datalog/: index.html
site/reference/: index.html
site/search/: search_index.json
site/support/: index.html
site/tutorial/: index.html
src/pydatalog/: __init__.py
tests/: test_all.py  test_examples.py
