[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDatalog"
version = "0.20.0"
description = "A pure-python implementation of Datalog, a truly declarative language derived from Prolog."
readme = "README.md"
authors = [
    { name = "Pierre Carbonnelle", email = "pierre.carbonnelle@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pymongo>=4.10.1",
    "sqlalchemy>=2.0",
]
keywords = ["prolog", "logic programming", "database", "SQL", "data integration", "expert system", "AI"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Prolog",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://sites.google.com/site/pydatalog/"
Download = "http://pypi.python.org/pypi?name=pyDatalog&:action=display"

[tool.setuptools.packages.find]
include = ["pyDatalog", "pyDatalog.examples"]

[tool.cibuildwheel]
skip = ["pp*"]
build-verbosity = 1
